# STDS

./: .gitignore  IMPLEMENTATION_SUMMARY.md  README.md
bindings/: binding.gyp  package.json  pnpm-lock.yaml
bindings/src/: bindings.cpp
core/: CMakeLists.txt
core/include/: Normalizer.hpp  STDSEngine.hpp  SequenceNode.hpp  SequenceTree.hpp
core/src/: Normalizer.cpp  STDSEngine.cpp  SequenceTree.cpp
data/: sample.csv
docs/: README.md  UML_DOCUMENTATION.md
docs/uml/: activity-diagram-training.puml  class-diagram-core.puml  component-diagram.puml  deployment-diagram.puml  sequence-diagram-decision.puml  sequence-diagram-training.puml  state-diagram.puml  use-case-diagram.puml
frontend/: package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: App.css  App.js
frontend/src/components/: ChartVisualization.css  ChartVisualization.js  ControlPanel.css  ControlPanel.js  GraphVisualization.css  GraphVisualization.js
server/: index.js  package.json  pnpm-lock.yaml
tests/: CMakeLists.txt  package.json  pnpm-lock.yaml  test_core.cpp  test_server.test.js
